--- a/src/styles/_static_html.scss
+++ b/src/styles/_static_html.scss
@@ -83,18 +83,10 @@
             width: 125px;
         }
 }
-#option1 {
-    padding-bottom: 10px;
-}
-#option2 {
-    padding-top: 10px;
-}
+
 #animate{
     width: 150px;
     height: 45px;
     color: $terra;
     font-size: 20px;
-}
-button:hover {
-    transform: scale(1.1);
 }
